[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/menus/main_menu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.814514
margin_right = 0.814453
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="MainMenuContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.5
margin_top = -22.0
margin_right = 20.5
margin_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuContainer"]
margin_right = 63.0
margin_bottom = 120.0
custom_constants/separation = 30
alignment = 1

[node name="StartButton" type="Button" parent="MainMenuContainer/VBoxContainer"]
margin_right = 63.0
margin_bottom = 20.0
text = "Start"

[node name="OptionsButton" type="Button" parent="MainMenuContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 63.0
margin_bottom = 70.0
text = "Options"

[node name="ExitButton" type="Button" parent="MainMenuContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 63.0
margin_bottom = 120.0
text = "Exit"

[node name="OptionsMenuContainer" type="CenterContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.5
margin_top = -55.0
margin_right = 36.5
margin_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenuContainer"]
margin_right = 203.0
margin_bottom = 110.0
custom_constants/separation = 30
alignment = 1

[node name="Label" type="Label" parent="OptionsMenuContainer/VBoxContainer"]
margin_right = 203.0
margin_bottom = 14.0
text = "Options"
align = 1

[node name="Volume" type="HBoxContainer" parent="OptionsMenuContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 203.0
margin_bottom = 60.0
custom_constants/separation = 50

[node name="Label" type="Label" parent="OptionsMenuContainer/VBoxContainer/Volume"]
margin_top = 1.0
margin_right = 53.0
margin_bottom = 15.0
text = "Volume:"

[node name="Slider" type="HSlider" parent="OptionsMenuContainer/VBoxContainer/Volume"]
margin_left = 103.0
margin_right = 203.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
tick_count = 100
ticks_on_borders = true

[node name="Buttons" type="HBoxContainer" parent="OptionsMenuContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 203.0
margin_bottom = 60.0
custom_constants/separation = 50

[node name="ApplyButton" type="Button" parent="OptionsMenuContainer/VBoxContainer/Buttons"]
margin_top = 46.0
margin_right = 203.0
margin_bottom = 66.0
text = "Apply"

[node name="BackButton" type="Button" parent="OptionsMenuContainer/VBoxContainer/Buttons"]
margin_top = 46.0
margin_right = 203.0
margin_bottom = 66.0
text = "Back"
